# UFC-NextChampApp

./: .gitignore  .replit  0-UFCnextChamp-Sheet.xlsx  config.py  main.py  models.py  pasted_text_1726416043348.txt  pasted_text_1726444961559.txt  pasted_text_1726445847348.txt  pasted_text_1726446014369.txt  pasted_text_1726479620979.txt  pyproject.toml  requirements.txt  update_firebase_config.py
static/css/: main.css
static/js/: auth.js  divisions.js  news.js  social.js
templates/: admin.html  admin_edit_division.html  admin_edit_news.html  admin_manage_divisions.html  admin_manage_news.html  base.html  divisions.html  edit_user.html  index.html  login.html  news.html  profile.html  register.html  upload_divisions.html
uploads/: 0-UFCnextChamp-Sheet.xlsx
